reconfigured scroll preventing and adjusted menu to scroll rather than collapse on resizes

--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -38,11 +38,11 @@
 
 .user-menu {
   background: $very-dark-gray;
-  display: flex;
-  flex-direction: column;
   overflow-y: scroll;
   transition: right 0.7s ease;
   width: 100vw;
+
+  -webkit-overflow-scrolling: touch;
 
   position: fixed;
   top: $header-height;
